Add tags to html
Mostly added header and list tags.

--- a/index.html
+++ b/index.html
@@ -5,59 +5,55 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML & CSS Review</title>
+  <link rel="style sheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Wix+Madefor+Display:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 
 
-  Scoopalicious
+<header>Scoopalicious</header>
+<nav>
+  <ul>
+    <li>Flavours</li>
+    <li>Locations</li>
+    <li>Shop online</li>
+  </ul>
+</nav>
 
-  Flavours
-  Locations
-  Shop online
-
+<img src="./images/ice-cream-cones.jpg"
 
   <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-  Scoopalicious
+<h1>Scoopalicious</h1>
+
+<h2>Welcome to Scoopalicious!</h2>
+
+ <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
 
 
+<h2>Top 5 Fan Favourites</h2>
 
-
-  Welcome to Scoopalicious!
-
-  Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!
-
-
-
-  Top 5 Fan Favourites
-
-  Choco-Obsession
-  
-  A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
-
-
-
-  Very Berry Blast
-  
-  A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
-
-
-
-  Cookie Crumble Craze
-  
-  Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
-
-
-
-  Peanut Butter Paradise
-  
-  Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
-
-
-
-  Mango Tango Sorbet
-  
-  A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
-
+ <dl>
+  <dt>Choco-Obsession</dt>
+  <dd> A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
+  </dd>
+  <dt>Very Berry Blast</dt>
+  <dd>A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
+  </dd>  
+  <dt>Cookie Crumble Craze</dt>
+  <dd>Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
+  </dd>
+  <dt>Peanut Butter Paradise</dt>
+  <dd>Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
+  </dd>
+  <dt>Mango Tango Sorbet</dt>
+  <dd>A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
+  </dd>
+ </dl>
 
 
   Meet Our Team
