--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </ul>
 </nav>
 
-<img src="./images/ice-cream-cones.jpg"
-
-  <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
+<main>
+<!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
+<img src="./images/ice-cream-cones.jpg">
 <h1>Scoopalicious</h1>
 
 <h2>Welcome to Scoopalicious!</h2>
@@ -56,31 +56,35 @@
  </dl>
 
 
-  Meet Our Team
+<h2>Meet Our Team</h2>
 
-  We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.
+  <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
   
   
   <!-- Display the image: sophia-lee.jpg -->
-  Sophia Lee
-  Founder & Flavour Guru
+   <img src="./images/sophia-lee.jpg">
+   <h3>Sophia Lee</h3>
+   <p>Founder & Flavour Guru</p>
 
 
   <!-- Display the image: henry-chen.jpg -->
-  Henry Chen
-  Master Scooper
+   <img src="./images/henry-chen.jpg">
+   <h3>Henry Chen</h3>
+   <p>Master Scooper</p>
 
   
   <!-- Display the image: olivia-parks.jpg -->
-  Olivia Parks
-  Vegan Dessert Chef
+   <img src="./images/olivia-parks.jpg">
+   <h3>Olivia Parks</h3>
+   <p>Vegan Dessert Chef</p>
 
   
   <!-- Display the image: elijah-taylor.jpg -->
-  Elijah Taylor
-  Flavour Innovator
-
+   <img src="./images/elijah-taylor.jpg">
+   <h3>Elijah Taylor</h3>
+   <p>Flavour Innovator</p>
+</main>
 
 
 
