Add divs and clean code layout
Also added footer tags

--- a/index.html
+++ b/index.html
@@ -15,81 +15,84 @@
 </head>
 <body>
 
-
-<header>Scoopalicious</header>
-<nav>
-  <ul>
-    <li>Flavours</li>
-    <li>Locations</li>
-    <li>Shop online</li>
-  </ul>
-</nav>
+<header>
+  <p>Scoopalicious</p>
+  <nav>
+    <ul>
+      <li>Flavours</li>
+      <li>Locations</li>
+      <li>Shop online</li>
+    </ul>
+  </nav>
+</header>
 
 <main>
+<div>
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-<img src="./images/ice-cream-cones.jpg">
-<h1>Scoopalicious</h1>
+  <img src="./images/ice-cream-cones.jpg" alt="Picture of ice cream cones">
+  <h1>Scoopalicious</h1>
+</div>  
 
-<h2>Welcome to Scoopalicious!</h2>
+<div>
+  <h2>Welcome to Scoopalicious!</h2>
+    <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
+</div>  
 
- <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
-
-
+<div>
 <h2>Top 5 Fan Favourites</h2>
-
  <dl>
   <dt>Choco-Obsession</dt>
-  <dd> A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
-  </dd>
+    <dd> A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
+    </dd>
   <dt>Very Berry Blast</dt>
-  <dd>A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
-  </dd>  
+    <dd>A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
+    </dd>  
   <dt>Cookie Crumble Craze</dt>
-  <dd>Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
-  </dd>
+    <dd>Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
+    </dd>
   <dt>Peanut Butter Paradise</dt>
-  <dd>Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
-  </dd>
+    <dd>Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
+    </dd>
   <dt>Mango Tango Sorbet</dt>
-  <dd>A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
-  </dd>
+    <dd>A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
+    </dd>
  </dl>
+</div>
 
-
-<h2>Meet Our Team</h2>
-
-  <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
+<div>
+ <h2>Meet Our Team</h2>
+    <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
   
   
   <!-- Display the image: sophia-lee.jpg -->
-   <img src="./images/sophia-lee.jpg">
-   <h3>Sophia Lee</h3>
-   <p>Founder & Flavour Guru</p>
+    <img src="./images/sophia-lee.jpg" alt="Picture of Sophia Lee">
+    <h3>Sophia Lee</h3>
+    <p>Founder & Flavour Guru</p>
 
 
   <!-- Display the image: henry-chen.jpg -->
-   <img src="./images/henry-chen.jpg">
-   <h3>Henry Chen</h3>
-   <p>Master Scooper</p>
+    <img src="./images/henry-chen.jpg" alt="Picture of Henry Chen">
+    <h3>Henry Chen</h3>
+    <p>Master Scooper</p>
 
   
   <!-- Display the image: olivia-parks.jpg -->
-   <img src="./images/olivia-parks.jpg">
-   <h3>Olivia Parks</h3>
-   <p>Vegan Dessert Chef</p>
+    <img src="./images/olivia-parks.jpg" alt="Picture of Olivia Parks">
+    <h3>Olivia Parks</h3>
+    <p>Vegan Dessert Chef</p>
 
   
   <!-- Display the image: elijah-taylor.jpg -->
-   <img src="./images/elijah-taylor.jpg">
-   <h3>Elijah Taylor</h3>
-   <p>Flavour Innovator</p>
+    <img src="./images/elijah-taylor.jpg" alt="Picture of Elijah Taylor">
+    <h3>Elijah Taylor</h3>
+    <p>Flavour Innovator</p>
+</div>   
 </main>
 
-
-
-  All rights reserved © 2023 Scoopalicious
-
+<footer>
+  <p>All rights reserved © 2023 Scoopalicious</p>
+</footer>
 
   
 </body>
