Add even more html code
still goin'

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
   <p>Scoopalicious</p>
   <nav>
     <ul>
-      <li>Flavours</li>
-      <li>Locations</li>
-      <li>Shop online</li>
+      <li> 
+        <a href="#">Flavours</a>
+      </li>
+      <li>
+        <a href="#">Locations</a>
+      </li>
+      <li>
+        <a href="#">Shop online</a>
+      </li>
     </ul>
   </nav>
 </header>
