Venture into css
what in the world..?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML & CSS Review</title>
-  <link rel="style sheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@800&display=swap" rel="stylesheet">
@@ -33,18 +33,18 @@
 </header>
 
 <main>
-<div>
+<div id="icecream">
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
   <img src="./images/ice-cream-cones.jpg" alt="Picture of ice cream cones">
   <h1>Scoopalicious</h1>
 </div>  
 
-<div>
+<div id="welcome">
   <h2>Welcome to Scoopalicious!</h2>
     <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
 </div>  
 
-<div>
+<div id="top5">
 <h2>Top 5 Fan Favourites</h2>
  <dl>
   <dt>Choco-Obsession</dt>
@@ -65,7 +65,7 @@
  </dl>
 </div>
 
-<div>
+<div id="theteam">
  <h2>Meet Our Team</h2>
     <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
