Add to style.css
who knows

--- a/index.html
+++ b/index.html
@@ -15,24 +15,18 @@
 </head>
 <body>
 
+<main class="wrapper">
 <header>
   <p>Scoopalicious</p>
   <nav>
     <ul>
-      <li> 
-        <a href="#">Flavours</a>
-      </li>
-      <li>
-        <a href="#">Locations</a>
-      </li>
-      <li>
-        <a href="#">Shop online</a>
-      </li>
+      <li><a href="#">Flavours</a></li>
+      <li><a href="#">Locations</a></li>
+      <li><a href="#">Shop online</a></li>
     </ul>
   </nav>
 </header>
 
-<main>
 <div id="icecream">
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
   <img src="./images/ice-cream-cones.jpg" alt="Picture of ice cream cones">
@@ -94,12 +88,11 @@
     <h3>Elijah Taylor</h3>
     <p>Flavour Innovator</p>
 </div>   
-</main>
 
 <footer>
   <p>All rights reserved © 2023 Scoopalicious</p>
 </footer>
-
+</main>
   
 </body>
 </html>
