Add color to css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
 
 <main class="wrapper">
-<header>
+<header class="dark">
   <p>Scoopalicious</p>
   <nav>
     <ul>
-      <li><a href="#">Flavours</a></li>
-      <li><a href="#">Locations</a></li>
-      <li><a href="#">Shop online</a></li>
+      <li><a href="#" aria-label="flavours">Flavours</a></li>
+      <li><a href="#" aria-label="locations">Locations</a></li>
+      <li><a href="#" aria-label="shop online">Shop online</a></li>
     </ul>
   </nav>
 </header>
@@ -33,12 +33,12 @@
   <h1>Scoopalicious</h1>
 </div>  
 
-<div id="welcome">
+<div id="welcome" class="purple">
   <h2>Welcome to Scoopalicious!</h2>
     <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
 </div>  
 
-<div id="top5">
+<div id="top5" class="dark">
 <h2>Top 5 Fan Favourites</h2>
  <dl>
   <dt>Choco-Obsession</dt>
@@ -59,7 +59,7 @@
  </dl>
 </div>
 
-<div id="theteam">
+<div id="theteam" class="purple">
  <h2>Meet Our Team</h2>
     <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
 
