Attempt to finally get rem working
we just don't know

--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
   
   
   <!-- Display the image: sophia-lee.jpg -->
-    <img src="./images/sophia-lee.jpg" alt="Picture of Sophia Lee">
+    <img src="./images/sophia-lee.jpg" alt="Picture of Sophia Lee" class="team">
     <h3>Sophia Lee</h3>
     <p>Founder & Flavour Guru</p>
 
 
   <!-- Display the image: henry-chen.jpg -->
-    <img src="./images/henry-chen.jpg" alt="Picture of Henry Chen">
+    <img src="./images/henry-chen.jpg" alt="Picture of Henry Chen" class="team">
     <h3>Henry Chen</h3>
     <p>Master Scooper</p>
 
   
   <!-- Display the image: olivia-parks.jpg -->
-    <img src="./images/olivia-parks.jpg" alt="Picture of Olivia Parks">
+    <img src="./images/olivia-parks.jpg" alt="Picture of Olivia Parks" class="team">
     <h3>Olivia Parks</h3>
     <p>Vegan Dessert Chef</p>
 
   
   <!-- Display the image: elijah-taylor.jpg -->
-    <img src="./images/elijah-taylor.jpg" alt="Picture of Elijah Taylor">
+    <img src="./images/elijah-taylor.jpg" alt="Picture of Elijah Taylor" class="team">
     <h3>Elijah Taylor</h3>
     <p>Flavour Innovator</p>
 </div>   
