--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<div id="icecream">
+<div id="icecream" class="icecream">
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
   <img src="./images/ice-cream-cones.jpg" alt="Picture of ice cream cones">
   <h1>Scoopalicious</h1>
