Add flexbox and grid
You know how it is

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <section id="hero-banner">
       <div class="wrapper">
 <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-      <h1>Scoopalicious</h1>
-    </div>
+        <h1>Scoopalicious</h1>
+      </div>
     </section>  
 
     <section id="intro">
       <div class="wrapper">
-      <h2>Welcome to Scoopalicious!</h2>
-      <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
+        <h2>Welcome to Scoopalicious!</h2>
+        <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
       </div>
     </section>  
 
@@ -80,33 +80,34 @@
       <div class="wrapper">
         <h2>Meet Our Team</h2>
         <p class="team-intro">We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
-
-    <!-- Display the image: sophia-lee.jpg -->
         <div class="team-grid">
-          <img src="images/sophia-lee.jpg" alt="Picture of Sophia Lee" class="team">
-          <h3>Sophia Lee</h3>
-          <p>Founder & Flavour Guru</p>
-        </div>
+    <!-- Display the image: sophia-lee.jpg -->
+          <div>
+            <img src="images/sophia-lee.jpg" alt="Picture of Sophia Lee" class="team">
+            <h3>Sophia Lee</h3>
+            <p>Founder & Flavour Guru</p>
+          </div>
 
     <!-- Display the image: henry-chen.jpg -->
-        <div class="team-grid">
-          <img src="images/henry-chen.jpg" alt="Picture of Henry Chen" class="team">
-          <h3>Henry Chen</h3>
-          <p>Master Scooper</p>
-        </div>
+          <div>
+            <img src="images/henry-chen.jpg" alt="Picture of Henry Chen" class="team">
+            <h3>Henry Chen</h3>
+            <p>Master Scooper</p>
+          </div>
     
     <!-- Display the image: olivia-parks.jpg -->
-        <div class="team-grid">
-          <img src="images/olivia-parks.jpg" alt="Picture of Olivia Parks" class="team">
-          <h3>Olivia Parks</h3>
-          <p>Vegan Dessert Chef</p>
-        </div>
+          <div>
+            <img src="images/olivia-parks.jpg" alt="Picture of Olivia Parks" class="team">
+            <h3>Olivia Parks</h3>
+            <p>Vegan Dessert Chef</p>
+          </div>
     
     <!-- Display the image: elijah-taylor.jpg -->
-        <div class="team-grid">
-          <img src="images/elijah-taylor.jpg" alt="Picture of Elijah Taylor" class="team">
-          <h3>Elijah Taylor</h3>
-          <p>Flavour Innovator</p>
+          <div>
+            <img src="images/elijah-taylor.jpg" alt="Picture of Elijah Taylor" class="team">
+            <h3>Elijah Taylor</h3>
+            <p>Flavour Innovator</p>
+          </div>
         </div>
       </div>
     </section>   
